--- a/Galerie.html
+++ b/Galerie.html
@@ -25,7 +25,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Căsuța Bunicii",
-		"logo": "casutabuniciilogoblack.png",
+		"logo": "logo.png",
 		"sameAs": [
 				"https://www.facebook.com/casutabunicii",
 				"http://twitter.com/share?text=Casuta%20Bunicii%20-%20Rusticeden%20-%20Pensiunea%20Casuta%20Bunicii%20-%20Rustic%20Eden%20-%20Casa%20Bunicii&url=http%3A%2F%2Fwww.rusticeden.ro%2Fro%2F",
@@ -41,8 +41,8 @@
   </head>
   <body class="u-body u-overlap u-xl-mode" data-lang="ro" data-lang-en="{&quot;head-title&quot;:&quot;Căsuța Bunicii - Galerie&quot;,&quot;head-keywords&quot;:&quot;rustic, pensiune rustica, bran, pensiune bran, cazare bran, pensiuni, pensiuni bran, cazare traditionala, rustice, rusticeden, rustic eden, cazare in bran, bran moeciu, casa bunicii, casabunicii, casuta bunicii, casutabunicii, pensiune traditionala, pensiuni rustice, cazare rustica bran&quot;,&quot;head-description&quot;:&quot;&quot;}"><header class="u-clearfix u-grey-5 u-header u-sticky u-sticky-0178 u-header" id="sec-a5be"><style class="u-sticky-style" data-style-id="0178">.u-sticky-fixed.u-sticky-0178, .u-body.u-sticky-fixed .u-sticky-0178 {
 box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
-}</style><a href="Acasă.html" data-page-id="2628879" class="div2 u-align-left u-image u-logo u-image-1" data-image-width="490" data-image-height="111" title="Home">
-        <img src="casutabuniciilogoblack.png" class="u-logo-image u-logo-image-1">
+}</style><a href="Acasă.html" data-page-id="2628879" class="div2 u-align-left u-image u-logo u-image-1" data-image-width="1039" data-image-height="186" title="Home">
+        <img src="logo.png" class="u-logo-image u-logo-image-1">
       </a><nav class="div1 u-align-right u-menu u-menu-one-level u-menu-open-right u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse u-custom-font u-font-oswald" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase;">
           <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-custom-color-2 u-text-hover-palette-2-base" href="#" data-lang-en="{&quot;content&quot;:&quot;<svg class=\&quot;u-svg-link\&quot; viewBox=\&quot;0 0 24 24\&quot;><use xlink:href=\&quot;#menu-hamburger\&quot;></use></svg><svg class=\&quot;u-svg-content\&quot; version=\&quot;1.1\&quot; id=\&quot;menu-hamburger\&quot; viewBox=\&quot;0 0 16 16\&quot; x=\&quot;0px\&quot; y=\&quot;0px\&quot; xmlns:xlink=\&quot;http://www.w3.org/1999/xlink\&quot; xmlns=\&quot;http://www.w3.org/2000/svg\&quot;>    <g>        <rect y=\&quot;1\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;7\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;13\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>    </g></svg>&quot;,&quot;href&quot;:&quot;#&quot;}">
@@ -326,7 +326,7 @@ background-color: #f2f2f2 !important
           <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/casutabunicii"><span class="u-icon u-social-facebook u-social-icon u-text-grey-80 u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e05a"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-e05a"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
 c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path></svg></span>
           </a>
-          <a class="u-social-url" title="twitter" target="_blank" href="http://twitter.com/share?text=Casuta%20Bunicii%20-%20Rusticeden%20-%20Pensiunea%20Casuta%20Bunicii%20-%20Rustic%20Eden%20-%20Casa%20Bunicii&amp;url=http%3A%2F%2Fwww.rusticeden.ro%2Fro%2F"><span class="u-icon u-social-icon u-social-twitter u-text-grey-80 u-icon-5"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-803c"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-803c"><circle fill="currentColor" class="st0" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,47.3c0,0.6,0,1.2,0,1.7c0,17.7-13.5,38.2-38.2,38.2C38,87.2,31,85,25,81.2c1,0.1,2.1,0.2,3.2,0.2
+          <a class="u-social-url" title="twitter" target="_blank" href="http://twitter.com/share?text=Casuta%20Bunicii%20-%20Rusticeden%20-%20Pensiunea%20Casuta%20Bunicii%20-%20Rustic%20Eden%20-%20Casa%20Bunicii&amp;url=http%3A%2F%2Fwww.rusticeden.ro%2F"><span class="u-icon u-social-icon u-social-twitter u-text-grey-80 u-icon-5"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-803c"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-803c"><circle fill="currentColor" class="st0" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,47.3c0,0.6,0,1.2,0,1.7c0,17.7-13.5,38.2-38.2,38.2C38,87.2,31,85,25,81.2c1,0.1,2.1,0.2,3.2,0.2
 c6.3,0,12.1-2.1,16.7-5.7c-5.9-0.1-10.8-4-12.5-9.3c0.8,0.2,1.7,0.2,2.5,0.2c1.2,0,2.4-0.2,3.5-0.5c-6.1-1.2-10.8-6.7-10.8-13.1
 c0-0.1,0-0.1,0-0.2c1.8,1,3.9,1.6,6.1,1.7c-3.6-2.4-6-6.5-6-11.2c0-2.5,0.7-4.8,1.8-6.7c6.6,8.1,16.5,13.5,27.6,14
 c-0.2-1-0.3-2-0.3-3.1c0-7.4,6-13.4,13.4-13.4c3.9,0,7.3,1.6,9.8,4.2c3.1-0.6,5.9-1.7,8.5-3.3c-1,3.1-3.1,5.8-5.9,7.4
@@ -343,6 +343,6 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-1" href="https://anur3.com/" target="_blank" data-lang-en="{&quot;content&quot;:&quot;​Proudly made by ANUR3&quot;,&quot;href&quot;:&quot;https://anur3.com/&quot;}"> Proudly made by ANUR3</a>
         </p>
       </div></footer>
-   
+    
   
 </body></html>
