--- a/Info.html
+++ b/Info.html
@@ -28,7 +28,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Căsuța Bunicii",
-		"logo": "casutabuniciilogoblack.png",
+		"logo": "logo.png",
 		"sameAs": [
 				"https://www.facebook.com/casutabunicii",
 				"http://twitter.com/share?text=Casuta%20Bunicii%20-%20Rusticeden%20-%20Pensiunea%20Casuta%20Bunicii%20-%20Rustic%20Eden%20-%20Casa%20Bunicii&url=http%3A%2F%2Fwww.rusticeden.ro%2Fro%2F",
@@ -46,8 +46,8 @@
   </head>
   <body class="u-body u-overlap u-overlap-contrast u-xl-mode" data-lang="ro" data-lang-en="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;​Luxury Interior Design Studio, ​Cozy Studio Apartment, ​Elegant und high-quality Interiors, ​Decorating Ideas, ​Vibrant Patterns, Cozy Kitchen, Contact Us&quot;,&quot;head-description&quot;:&quot;&quot;}"><header class="u-clearfix u-grey-5 u-header u-sticky u-sticky-0178 u-header" id="sec-a5be"><style class="u-sticky-style" data-style-id="0178">.u-sticky-fixed.u-sticky-0178, .u-body.u-sticky-fixed .u-sticky-0178 {
 box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
-}</style><a href="Acasă.html" data-page-id="2628879" class="div2 u-align-left u-image u-logo u-image-1" data-image-width="490" data-image-height="111" title="Home">
-        <img src="casutabuniciilogoblack.png" class="u-logo-image u-logo-image-1">
+}</style><a href="Acasă.html" data-page-id="2628879" class="div2 u-align-left u-image u-logo u-image-1" data-image-width="1039" data-image-height="186" title="Home">
+        <img src="logo.png" class="u-logo-image u-logo-image-1">
       </a><nav class="div1 u-align-right u-menu u-menu-one-level u-menu-open-right u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse u-custom-font u-font-oswald" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase;">
           <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-custom-color-2 u-text-hover-palette-2-base" href="#" data-lang-en="{&quot;content&quot;:&quot;<svg class=\&quot;u-svg-link\&quot; viewBox=\&quot;0 0 24 24\&quot;><use xlink:href=\&quot;#menu-hamburger\&quot;></use></svg><svg class=\&quot;u-svg-content\&quot; version=\&quot;1.1\&quot; id=\&quot;menu-hamburger\&quot; viewBox=\&quot;0 0 16 16\&quot; x=\&quot;0px\&quot; y=\&quot;0px\&quot; xmlns:xlink=\&quot;http://www.w3.org/1999/xlink\&quot; xmlns=\&quot;http://www.w3.org/2000/svg\&quot;>    <g>        <rect y=\&quot;1\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;7\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;13\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>    </g></svg>&quot;,&quot;href&quot;:&quot;#&quot;}">
