--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Căsuța Bunicii",
-		"logo": "casutabuniciilogoblack.png",
+		"logo": "logo.png",
 		"sameAs": [
 				"https://www.facebook.com/casutabunicii",
 				"http://twitter.com/share?text=Casuta%20Bunicii%20-%20Rusticeden%20-%20Pensiunea%20Casuta%20Bunicii%20-%20Rustic%20Eden%20-%20Casa%20Bunicii&url=http%3A%2F%2Fwww.rusticeden.ro%2Fro%2F",
@@ -50,8 +50,8 @@
   </head>
   <body data-home-page="Acasă.html" data-home-page-title="Acasă" class="u-body u-overlap u-overlap-contrast u-xl-mode" data-lang="ro" data-lang-en="{&quot;head-title&quot;:&quot;&quot;,&quot;head-keywords&quot;:&quot;​Luxury Interior Design Studio, ​Cozy Studio Apartment, ​Elegant und high-quality Interiors, ​Decorating Ideas, ​Vibrant Patterns, Cozy Kitchen, Contact Us&quot;,&quot;head-description&quot;:&quot;&quot;}"><header class="u-clearfix u-grey-5 u-header u-sticky u-sticky-0178 u-header" id="sec-a5be"><style class="u-sticky-style" data-style-id="0178">.u-sticky-fixed.u-sticky-0178, .u-body.u-sticky-fixed .u-sticky-0178 {
 box-shadow: 0 2px 8px 0 rgba(0,0,0,0.7) !important
-}</style><a href="Acasă.html" data-page-id="2628879" class="div2 u-align-left u-image u-logo u-image-1" data-image-width="490" data-image-height="111" title="Home">
-        <img src="casutabuniciilogoblack.png" class="u-logo-image u-logo-image-1">
+}</style><a href="Acasă.html" data-page-id="2628879" class="div2 u-align-left u-image u-logo u-image-1" data-image-width="1039" data-image-height="186" title="Home">
+        <img src="logo.png" class="u-logo-image u-logo-image-1">
       </a><nav class="div1 u-align-right u-menu u-menu-one-level u-menu-open-right u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse u-custom-font u-font-oswald" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase;">
           <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-custom-color-2 u-text-hover-palette-2-base" href="#" data-lang-en="{&quot;content&quot;:&quot;<svg class=\&quot;u-svg-link\&quot; viewBox=\&quot;0 0 24 24\&quot;><use xlink:href=\&quot;#menu-hamburger\&quot;></use></svg><svg class=\&quot;u-svg-content\&quot; version=\&quot;1.1\&quot; id=\&quot;menu-hamburger\&quot; viewBox=\&quot;0 0 16 16\&quot; x=\&quot;0px\&quot; y=\&quot;0px\&quot; xmlns:xlink=\&quot;http://www.w3.org/1999/xlink\&quot; xmlns=\&quot;http://www.w3.org/2000/svg\&quot;>    <g>        <rect y=\&quot;1\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;7\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;13\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>    </g></svg>&quot;,&quot;href&quot;:&quot;#&quot;}">
@@ -222,7 +222,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       <a href="Galerie.html" data-page-id="2660693" class="u-active-white u-border-2 u-border-grey-5 u-border-hover-white u-btn u-button-style u-custom-font u-font-oswald u-grey-5 u-hover-white u-btn-1" data-lang-en="{&quot;content&quot;:&quot;vezi mai mult&quot;,&quot;href&quot;:&quot;2660693&quot;}">vezi mai mult</a>
     </section>
     <section class="u-align-center u-clearfix u-grey-10 u-section-7" id="carousel_b355">
-      <div class="u-clearfix u-sheet u-valign-middle-xl u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-align-left u-custom-font u-font-oswald u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250" data-lang-en="​<span class=&quot;u-file-icon u-icon u-text-custom-color-2 u-icon-1&quot; style=&quot;font-size: 1.6667em; vertical-align: -5px; margin-right: 10px&quot;><img src=&quot;1017088-b0e7be6c.png&quot; alt=&quot;&quot; data-original-src=&quot;1017088.png&quot; data-color=&quot;#000000&quot;></span>&amp;nbsp;Parcare gratuita"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-1"><img src="1017088-b0e7be6c.png" alt=""></span>&nbsp;Parcare gratuita
         </p>
         <p class="u-align-left u-custom-font u-font-oswald u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250" data-lang-en="​<span class=&quot;u-file-icon u-icon u-text-custom-color-2 u-icon-2&quot; style=&quot;font-size: 1.6667em; vertical-align: -5px; margin-right: 10px&quot;><img src=&quot;159599-d1757b8c.png&quot; alt=&quot;&quot; data-original-src=&quot;159599.png&quot; data-color=&quot;#000000&quot;></span>​Internet de mare viteză gratuit(WiFi)"><span class="u-file-icon u-icon u-text-custom-color-2 u-icon-2"><img src="159599-d1757b8c.png" alt=""></span> Internet de mare viteză gratuit(WiFi)
@@ -244,55 +244,50 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <h2 class="u-custom-font u-font-oswald u-text u-text-default u-text-9" data-lang-en="Rezervare<br>">Rezervare<br>
             </h2>
             <div class="u-align-left u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
-              <form action="https://formsubmit.co/tvladalex08@gmail.com" method="POST" class="u-clearfix u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 10px" source="custom" name="form" novalidate="novalidate">
-                <div class="u-form-group u-form-name">
-                  <label class="u-form-control-hidden u-label u-text-grey-50" data-lang-en="Name">Name</label>
+              <form action="https://formsubmit.co/tvladalex08@gmail.com" method="POST" class="u-clearfix u-form-custom-backend u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 10px" source="custom" name="form" redirect="true">
+              <div class="u-form-group u-form-name">
+                  <label class="u-custom-font u-font-oswald u-form-control-hidden u-label u-text-grey-50 u-label-1" data-lang-en="Name">Name</label>
                   <input type="text" placeholder="Nume și Prenume" id="name-5a14" name="name" class="u-custom-font u-font-oswald u-grey-10 u-input u-input-rectangle u-input-1" required="" data-lang-en="Nume și Prenume">
                 </div>
                 <div class="u-form-group u-form-phone u-form-group-2">
-                  <label class="u-form-control-hidden u-label u-text-grey-50" data-lang-en=""></label>
+                  <label class="u-custom-font u-font-oswald u-form-control-hidden u-label u-text-grey-50 u-label-2" data-lang-en=""></label>
                   <input type="tel" placeholder="Număr de telefon" id="phone-a480" name="phone" class="u-custom-font u-font-oswald u-grey-10 u-input u-input-rectangle u-input-2" required="" data-lang-en="Număr de telefon">
                 </div>
                 <div class="u-form-email u-form-group">
-                  <label class="u-form-control-hidden u-label u-text-grey-50" data-lang-en="Email">Email</label>
+                  <label class="u-custom-font u-font-oswald u-form-control-hidden u-label u-text-grey-50 u-label-3" data-lang-en="Email">Email</label>
                   <input type="email" placeholder="Adresă de email" id="email-5a14" name="email" class="u-custom-font u-font-oswald u-grey-10 u-input u-input-rectangle u-input-3" required="" data-lang-en="Adresă de email">
                 </div>
                 <div class="u-form-group u-form-group-4">
-                  <label class="u-form-control-hidden u-label u-text-grey-50" data-lang-en=""></label>
+                  <label class="u-custom-font u-font-oswald u-form-control-hidden u-label u-text-grey-50 u-label-4" data-lang-en=""></label>
                   <input type="text" placeholder="Număr de persoane" id="text-b3a2" name="text" class="u-custom-font u-font-oswald u-grey-10 u-input u-input-rectangle u-input-4" data-lang-en="Număr de persoane">
                 </div>
                 <div class="u-form-date u-form-group u-form-group-5">
-                  <label class="u-label u-text-grey-50" data-lang-en="Check-in">Check-in</label>
+                  <label class="u-custom-font u-font-oswald u-label u-text-grey-50 u-label-5" data-lang-en="Check-in">Check-in</label>
                   <input type="date" placeholder="MM/DD/YYYY" id="date-6bd9" name="Check-in" class="u-custom-font u-font-oswald u-grey-10 u-input u-input-rectangle u-input-5" required="" data-lang-en="MM/DD/YYYY">
                 </div>
                 <div class="u-form-date u-form-group u-form-group-6">
-                  <label class="u-label u-text-grey-50" data-lang-en="Check-out">Check-out</label>
+                  <label class="u-custom-font u-font-oswald u-label u-text-grey-50 u-label-6" data-lang-en="Check-out">Check-out</label>
                   <input type="date" placeholder="MM/DD/YYYY" id="date-1ea1" name="Check-out" class="u-custom-font u-font-oswald u-grey-10 u-input u-input-rectangle u-input-6" required="" data-lang-en="MM/DD/YYYY">
                 </div>
                 <div class="u-form-group u-form-message">
-                  <label class="u-form-control-hidden u-label u-text-grey-50" data-lang-en="Message">Message</label>
+                  <label class="u-custom-font u-font-oswald u-form-control-hidden u-label u-text-grey-50 u-label-7" data-lang-en="Message">Message</label>
                   <textarea placeholder="Alte detalii" id="message-5a14" name="message" class="u-custom-font u-font-oswald u-grey-10 u-input u-input-rectangle u-input-7" required="" data-lang-en="Alte detalii"></textarea>
                 </div>
                 <div class="u-align-center u-form-group u-form-submit">
                   <a href="#" class="u-active-black u-border-none u-btn u-btn-submit u-button-style u-custom-color-2 u-custom-font u-font-oswald u-hover-black u-text-active-white u-text-grey-5 u-text-hover-white u-btn-1" data-lang-en="{&quot;content&quot;:&quot;Rezervă&quot;,&quot;href&quot;:&quot;#&quot;}">Rezervă</a>
                   <input type="submit" value="submit" class="u-form-control-hidden">
                 </div>
-                <div class="u-form-send-message u-form-send-success" data-lang-en="
-            Thank you! Your message has been sent.
-        "> Thank you! Your message has been sent. </div>
-                <div class="u-form-send-error u-form-send-message" data-lang-en="
-            Unable to send your message. Please fix errors then try again.
-        "> Unable to send your message. Please fix errors then try again. </div>
-                <input type="hidden" value="" name="recaptchaResponse">
-              </form>
+              <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+              <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+              <input type="hidden" value="" name="recaptchaResponse">
+            </form>
             </div>
           </div>
         </div>
-        <h2 class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-custom-font u-font-oswald u-text u-text-default u-text-10" data-animation-name="customAnimationIn" data-animation-duration="1500" data-lang-en="Tarif: 700lei/noapte<br><br>Capacitate maximă:&amp;nbsp;<br>4 persoane<br>">Star rating:</h2><span class="u-file-icon u-icon u-icon-9" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0"><img src="2107957.png" alt=""></span><span class="u-file-icon u-icon u-icon-10" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0"><img src="2107957.png" alt=""></span><span class="u-file-icon u-icon u-icon-11" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0"><img src="2107957.png" alt=""></span>
-        <h2 class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-custom-font u-font-oswald u-text u-text-default u-text-11" data-animation-name="customAnimationIn" data-animation-duration="1500" data-lang-en="Tarif: 700lei/noapte<br><br>Capacitate maximă:&amp;nbsp;<br>4 persoane<br>">Tarif: 700lei/noapte<br>
+        <h2 class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-custom-font u-font-oswald u-text u-text-default u-text-10" data-animation-name="customAnimationIn" data-animation-duration="1500" data-lang-en="Tarif: 700lei/noapte<br><br>Capacitate maximă:&amp;nbsp;<br>4 persoane<br>">Tarif: 700lei/noapte<br>
           <br>Capacitate maximă:&nbsp;<br>4 persoane<br>
         </h2>
-        <p class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-custom-font u-font-oswald u-text u-text-12" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250" data-lang-en="​*​Șederea minimă este de două nopți"> *​Șederea minimă este de două nopți</p>
+        <p class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-custom-font u-font-oswald u-text u-text-11" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="250" data-lang-en="​*​Șederea minimă este de două nopți"> *​Șederea minimă este de două nopți</p>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-custom-color-2 u-section-8" id="sec-a41e">
@@ -548,8 +543,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <div class="u-container-layout u-valign-middle-xl u-valign-top-xs u-container-layout-1">
             <h2 class="u-custom-font u-font-oswald u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1" data-lang-en="Contactează-ne">Contactează-ne</h2>
             <div class="u-align-left u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
-              <form action="https://formsubmit.co/tvladalex08@gmail.com" method="POST" class="u-clearfix u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 10px" source="custom" name="form" novalidate="novalidate">
-                <div class="u-form-group u-form-name">
+               <form action="https://formsubmit.co/tvladalex08@gmail.com" method="POST" class="u-clearfix u-form-custom-backend u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 10px" source="custom" name="form" redirect="true">
+              <div class="u-form-group u-form-name">
                   <label class="u-form-control-hidden u-label" data-lang-en="Name">Name</label>
                   <input type="text" placeholder="Nume și Prenume" id="name-5a14" name="name" class="u-custom-font u-font-oswald u-grey-10 u-input u-input-rectangle u-input-1" required="" data-lang-en="Nume și Prenume">
                 </div>
@@ -569,14 +564,10 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <a href="#" class="u-active-black u-border-none u-btn u-btn-submit u-button-style u-custom-color-2 u-custom-font u-font-oswald u-hover-black u-text-active-white u-text-grey-5 u-text-hover-white u-btn-1" data-lang-en="{&quot;content&quot;:&quot;trimite&quot;,&quot;href&quot;:&quot;#&quot;}">trimite</a>
                   <input type="submit" value="submit" class="u-form-control-hidden">
                 </div>
-                <div class="u-form-send-message u-form-send-success" data-lang-en="
-            Thank you! Your message has been sent.
-        "> Thank you! Your message has been sent. </div>
-                <div class="u-form-send-error u-form-send-message" data-lang-en="
-            Unable to send your message. Please fix errors then try again.
-        "> Unable to send your message. Please fix errors then try again. </div>
-                <input type="hidden" value="" name="recaptchaResponse">
-              </form>
+              <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+              <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+              <input type="hidden" value="" name="recaptchaResponse">
+            </form>
             </div>
           </div>
         </div>
@@ -644,7 +635,7 @@ background-color: #f2f2f2 !important
           <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/casutabunicii"><span class="u-icon u-social-facebook u-social-icon u-text-grey-80 u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-e05a"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-e05a"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
 c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path></svg></span>
           </a>
-          <a class="u-social-url" title="twitter" target="_blank" href="http://twitter.com/share?text=Casuta%20Bunicii%20-%20Rusticeden%20-%20Pensiunea%20Casuta%20Bunicii%20-%20Rustic%20Eden%20-%20Casa%20Bunicii&amp;url=http%3A%2F%2Fwww.rusticeden.ro%2Fro%2F"><span class="u-icon u-social-icon u-social-twitter u-text-grey-80 u-icon-5"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-803c"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-803c"><circle fill="currentColor" class="st0" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,47.3c0,0.6,0,1.2,0,1.7c0,17.7-13.5,38.2-38.2,38.2C38,87.2,31,85,25,81.2c1,0.1,2.1,0.2,3.2,0.2
+          <a class="u-social-url" title="twitter" target="_blank" href="http://twitter.com/share?text=Casuta%20Bunicii%20-%20Rusticeden%20-%20Pensiunea%20Casuta%20Bunicii%20-%20Rustic%20Eden%20-%20Casa%20Bunicii&amp;url=http%3A%2F%2Fwww.rusticeden.ro%2F"><span class="u-icon u-social-icon u-social-twitter u-text-grey-80 u-icon-5"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-803c"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-803c"><circle fill="currentColor" class="st0" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,47.3c0,0.6,0,1.2,0,1.7c0,17.7-13.5,38.2-38.2,38.2C38,87.2,31,85,25,81.2c1,0.1,2.1,0.2,3.2,0.2
 c6.3,0,12.1-2.1,16.7-5.7c-5.9-0.1-10.8-4-12.5-9.3c0.8,0.2,1.7,0.2,2.5,0.2c1.2,0,2.4-0.2,3.5-0.5c-6.1-1.2-10.8-6.7-10.8-13.1
 c0-0.1,0-0.1,0-0.2c1.8,1,3.9,1.6,6.1,1.7c-3.6-2.4-6-6.5-6-11.2c0-2.5,0.7-4.8,1.8-6.7c6.6,8.1,16.5,13.5,27.6,14
 c-0.2-1-0.3-2-0.3-3.1c0-7.4,6-13.4,13.4-13.4c3.9,0,7.3,1.6,9.8,4.2c3.1-0.6,5.9-1.7,8.5-3.3c-1,3.1-3.1,5.8-5.9,7.4
